--- a/examples/LandmarkDetection/DQN/GUI/css/right_widget_browse.css
+++ b/examples/LandmarkDetection/DQN/GUI/css/right_widget_browse.css
@@ -1,3 +1,8 @@
+/*
+# CSS file for right widget browse mode
+# Author: Maleakhi 
+ */
+
 QPushButton:disabled {
     background: white;
     color: grey;
